# ProyectoFinalVision

./: .gitignore  CMakeLists.txt  README.md  entrenar_hog.py  generar_dataset.py  generar_metricas.py  guion_proyecto.txt  main.cpp  servidor.py
pose-estimation.v3i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
pose-estimation.v3i.yolov8/test/labels/: 360_F_430891095_znI8esf5bN3mrqWLBjas8loMqSISzHTp_jpg.rf.8c2931ce43f86fc1e6dbaafe95fa6b28.txt  759c8347beb0a471845eb264d697e11e_jpg.rf.ed23d10fbffd48a7fca0a8e243984545.txt  istockphoto-503219100-612x612_jpg.rf.86688f2fa0f4124dc3fa620580e52ee1.txt  png-transparent-sitting-sitting-man-miscellaneous-furniture-people_png.rf.39a57d8bf55cf4f2aa3b2cf5b278f35c.txt  premium_photo-1661517668831-e30d52c4af09_jpeg.rf.dcc69f21c6b9da90dca950744963771b.txt  premium_photo-1663088651100-85eac75d894a_jpeg.rf.9cd4af5a266d72204c065195e291cdfa.txt  premium_photo-1723478491563-ec4a73bdd673_jpeg.rf.259a818d2520703ffe675031eadd4d1e.txt  savetheredwoods_evanmariepetit-16-web-scaled_jpg.rf.81539c5cb3fb24f30d7b29893d85e17a.txt
pose-estimation.v3i.yolov8/train/labels/: 1000_F_100156366_8CW9TeRvaN81lvNMM5PMB4jMhBKY14Wz_jpg.rf.01f1af4f52be70f38dfb513a4a5f4938.txt  1000_F_205237207_3sI7U5qRpcKgJWGF2srbiOy6KKUPRB9L_jpg.rf.be7f0de73b9f630531d4e590b8f546c9.txt  128383694-relaxed-people-standing-with-beer-bottles-and-looking-aside-group-of-friends-relaxing-in-park_jpg.rf.337409dff4fb56d1a0b0f5aaf4d27cea.txt  14physed-running-photo-superJumbo_jpg.rf.9a318a9f6b22a120f02efab19f83f143.txt  17A_jpg.rf.a8dddebc4a9d18f31a501d1ab9d13f06.txt  (+30 more)
(+4 files in other folders)
